hphp/hack/test/typecheck/reactive/mayberx1.php
<?hh // strict

// ERROR, __AtMostRxAsFunc can only appear on parameters of
// conditionally reactive functions
<<__AtMostRxAsFunc>>
class A {
}
